--- a/index.html
+++ b/index.html
@@ -22,9 +22,30 @@
             <th>Task Name</th>
             <th>Task Link</th>
         </tr>
+
+        <!--  HTML TASKS -->
+        <tr>
+            <td colspan = "2"><b> HTML Tasks </b></td>
+        </tr>
         <tr>
             <td>Task 1</td>
-            <td><a href="HTML_Tasks/Task1.html"> Task 1</a></td>
+            <td><a href="Task1_HTML.html"> Task 1</a></td>
+        </tr>
+        <tr>
+            <td>Task 2</td>
+            <td><a href="Task2_HTML.html"> Task 1</a></td>
+        </tr>
+        <tr>
+            <td>Task 3</td>
+            <td><a href="Task3_HTML.html"> Task 1</a></td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td><a href="Task4_HTML.html"> Task 1</a></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td><a href="Task5_HTML.html"> Task 1</a></td>
         </tr>
     </table>
     
