--- a/index.html
+++ b/index.html
@@ -29,23 +29,56 @@
         </tr>
         <tr>
             <td>Task 1</td>
-            <td><a href="Task1_HTML.html"> Task 1</a></td>
+            <td><a href="Task1_HTML.html">Task 1</a></td>
         </tr>
         <tr>
             <td>Task 2</td>
-            <td><a href="Task2_HTML.html"> Task 1</a></td>
+            <td><a href="Task2_HTML.html">Task 2</a></td>
         </tr>
         <tr>
             <td>Task 3</td>
-            <td><a href="Task3_HTML.html"> Task 1</a></td>
+            <td><a href="Task3_HTML.html">Task 3</a></td>
         </tr>
         <tr>
             <td>Task 4</td>
-            <td><a href="Task4_HTML.html"> Task 1</a></td>
+            <td><a href="Task4_HTML.html">Task 4</a></td>
         </tr>
         <tr>
             <td>Task 5</td>
-            <td><a href="Task5_HTML.html"> Task 1</a></td>
+            <td><a href="Task5_HTML.html">Task 5</a></td>
+        </tr>
+
+        <!--  CSS TASKS -->
+        <tr>
+            <td colspan = "2"><b> CSS Tasks </b></td>
+        </tr>
+        <tr>
+            <td>Task 1</td>
+            <td><a href="Task1_CSS.html">Task 1</a></td>
+        </tr>
+        <tr>
+            <td>Task 2</td>
+            <td><a href="Task2_CSS.html">Task 2</a></td>
+        </tr>
+        <tr>
+            <td>Task 3</td>
+            <td><a href="Task3_CSS.html">Task 3</a></td>
+        </tr>
+        <tr>
+            <td>Task 4</td>
+            <td><a href="Task4_CSS.html">Task 4</a></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td><a href="Task5_CSS.html">Task 5</a></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td><a href="Task6_CSS.html">Task 6</a></td>
+        </tr>
+        <tr>
+            <td>Task 5</td>
+            <td><a href="Task7_CSS.html">Task 5</a></td>
         </tr>
     </table>
     
