--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Index</title>
     <style>
         table,tr,td, th{
+            margin: auto;
             text-align: center;
             padding-top: 10px;
             padding-bottom: 10px;
@@ -73,11 +74,11 @@
             <td><a href="Task5_CSS.html">Task 5</a></td>
         </tr>
         <tr>
-            <td>Task 5</td>
+            <td>Task 6</td>
             <td><a href="Task6_CSS.html">Task 6</a></td>
         </tr>
         <tr>
-            <td>Task 5</td>
+            <td>Task 7</td>
             <td><a href="Task7_CSS.html">Task 7</a></td>
         </tr>
     </table>
