--- a/Task5_HTML.html
+++ b/Task5_HTML.html
@@ -8,6 +8,7 @@
       body {
         margin: 70px;
       }
+
       table,
       tr,
       td {
@@ -15,21 +16,23 @@
         text-align: center;
         border-collapse: collapse;
         padding: 3px;
+        width: 40%;
       }
-      .name {
-        padding-right: 40px;
-      }
+
       .inputwithoutradio {
         width: 300px;
       }
+
       .radio {
         display: inline-block;
       }
+
       .declare {
         display: inline-block;
         margin-top: 0;
         margin-bottom: 0;
       }
+
       .register {
         text-align: center;
       }
@@ -42,23 +45,23 @@
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">Last Name:</td>
+        <td>Last Name:</td>
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">Email</td>
+        <td>Email</td>
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">Password</td>
+        <td>Password</td>
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">Reenter Password</td>
+        <td>Reenter Password</td>
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">Gender</td>
+        <td>Gender</td>
         <td>
           <input class="radio" type="radio" name="gender" />
           <label for="gender">Male</label>
@@ -69,15 +72,15 @@
         </td>
       </tr>
       <tr>
-        <td class="name">Age:</td>
+        <td>Age:</td>
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">Phone Number</td>
+        <td>Phone Number</td>
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">
+        <td>
           <label for="address">Address: </label>
         </td>
         <td>
@@ -91,11 +94,11 @@
         </td>
       </tr>
       <tr>
-        <td class="name">State</td>
+        <td>State</td>
         <td><input class="inputwithoutradio" type="text" /></td>
       </tr>
       <tr>
-        <td class="name">Country</td>
+        <td>Country</td>
         <td>
           <select name="country" id="country">
             <option value="india">America</option>
@@ -111,7 +114,7 @@
         </td>
       </tr>
       <tr>
-        <td class="name">Language</td>
+        <td>Language</td>
         <td>
           <input type="checkbox" name="lang" />
           <label for="lang">English</label>
@@ -126,11 +129,13 @@
       <tr>
         <td align="center" colspan="2">
           <input class="radio" type="radio" />
-          <p class="declare">Hereby I declare all the given details are true</p>
+          <p class="declare">
+            Hereby I declare all the given details are true
+          </p>
         </td>
       </tr>
       <tr>
-        <td colspan="2" align="right">
+        <td colspan="2">
           <p class="declare">
             Log in to <a href="https://ethnus.com/">Ethnus</a> Website
           </p>
